--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -31,6 +31,11 @@ logging.level.org.springframework.security=${LOGGING_LEVEL_SECURITY:INFO}
 logging.level.com.hospital.warehouse=DEBUG
 
 # File Upload Configuration
-spring.servlet.multipart.max-file-size=50MB
-spring.servlet.multipart.max-request-size=50MB
-file.upload.dir=uploads/warehouse
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=5MB
+
+# Upload directory
+file.upload-dir=uploads
+
+
