--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^7.8.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
